<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/context_menu"
        android:title="@string/context_menu"
        android:icon="@drawable/btn_add"
        android:orderInCategory="100"
        app:showAsAction="always" >
        <menu>
            <item android:title="" android:id="@+id/menu_back" android:icon="@drawable/icn_close" />
            <item android:title="@string/menu_tutorial" android:id="@+id/menu_help" android:icon="@drawable/icn_1"/>
            <item android:title="@string/menu_restart" android:id="@+id/menu_restart" android:icon="@drawable/icn_2"/>
            <item android:title="@string/menu_charts" android:id="@+id/menu_charts" android:icon="@drawable/icn_3"/>
            <item android:title="@string/menu_info" android:id="@+id/menu_info" android:icon="@drawable/icn_4"/>
            <item android:title="@string/menu_exit" android:id="@+id/menu_exit" android:icon="@drawable/icn_5"/>
        </menu>
    </item>

</menu>
